--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,1 +1,7 @@
-AF.PA;sell;9
+NNDM;buy;15;280;
+SOLO;buy;7.5;280;
+BYND;buy;140;280;
+DOCU;buy;200;280;
+CRSP;buy;166;280;
+APHA;buy;25;292;
+ACB;buy;14.5;280;
