--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,7 +1,6 @@
-NNDM;buy;15;280;
-SOLO;buy;7.5;280;
-BYND;buy;140;280;
-DOCU;buy;200;280;
-CRSP;buy;166;280;
-APHA;buy;25;292;
-ACB;buy;14.5;280;
+GALE.ZU;buy;1000;200;
+SOBI.ST;buy;1000;200;
+WLL;buy;1000;200;
+TEO;buy;1000;200;
+PRGO;buy;1000;200;
+HTZGQ;buy;1000;200;
