export data into sqlite db

--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,6 +1,9 @@
-GALE.ZU;buy;1000;200;
-SOBI.ST;buy;1000;200;
-WLL;buy;1000;200;
-TEO;buy;1000;200;
-PRGO;buy;1000;200;
-HTZGQ;buy;1000;200;
+NNDM;buy;6.5;102;
+AAPL;buy;119;102;
+ACB;buy;8.7;102;
+APHA;buy;17;102;
+NIO;buy;30;102;
+TLRY;buy;19;102;
+PLTR;buy;20;102;
+TSLA;buy;580;102;
+RR.L;buy;100;102;
