--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,9 +1,13 @@
-NNDM;buy;6.5;102;
+NNDM;buy;7.5;102;
 AAPL;buy;119;102;
-ACB;buy;8.7;102;
-APHA;buy;17;102;
+ACB;buy;8.5;102;
 NIO;buy;30;102;
 TLRY;buy;19;102;
-PLTR;buy;20;102;
-TSLA;buy;580;102;
-RR.L;buy;100;102;
+PLTR;buy;19;102;
+TSLA;buy;590;102;
+RR.L;buy;103;102;
+HMMJ;buy;7.5;102;
+PSLV;buy;6.5;102;
+TAN;buy;80;102;
+GLDM;buy;15.2;102;
+SPCE;buy;25;102;
