--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,13 +1,13 @@
-NNDM;buy;7.5;102;
-AAPL;buy;119;102;
-ACB;buy;8.5;102;
-NIO;buy;30;102;
-TLRY;buy;19;102;
-PLTR;buy;19;102;
-TSLA;buy;590;102;
-RR.L;buy;103;102;
-HMMJ;buy;7.5;102;
-PSLV;buy;6.5;102;
-TAN;buy;80;102;
-GLDM;buy;15.2;102;
-SPCE;buy;25;102;
+NNDM;buy;7.5;102;8;
+AAPL;buy;119;102;122;
+ACB;buy;8.5;102;9;
+NIO;buy;30;102;60;
+TLRY;buy;19;102;100;
+PLTR;buy;19;102;52;
+TSLA;buy;590;102;1000;
+RR.L;buy;103;102;700;
+HMMJ;buy;7.5;102;40;
+PSLV;buy;6.5;102;21;
+TAN;buy;80;102;200;
+GLDM;buy;15.2;102;40;
+SPCE;buy;25;102;50;
