--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -5,9 +5,15 @@ NIO;buy;30;102;60;
 TLRY;buy;19;102;100;
 PLTR;buy;19;102;52;
 TSLA;buy;590;102;1000;
-RR.L;buy;103;102;700;
+RR.L;buy;101;102;107;
 HMMJ;buy;7.5;102;40;
 PSLV;buy;6.5;102;21;
 TAN;buy;80;102;200;
 GLDM;buy;15.2;102;40;
-SPCE;buy;25;102;50;
+SPCE;buy;25;102;30;
+SUNW;buy;11;102;15;
+FSLR;buy;77;102;85;
+SPWR;buy;31;102;35;
+RUN;buy;54;102;60;
+SEDG;buy;274;102;290;
+BIDU;buy;215;102;300;
