Optimize get requests

--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,19 +1,22 @@
-NNDM;buy;7.5;102;8;
-AAPL;buy;119;102;122;
-ACB;buy;8.5;102;9;
-NIO;buy;30;102;60;
-TLRY;buy;19;102;100;
-PLTR;buy;19;102;52;
-TSLA;buy;590;102;1000;
-RR.L;buy;101;102;107;
-HMMJ;buy;7.5;102;40;
-PSLV;buy;6.5;102;21;
-TAN;buy;80;102;200;
-GLDM;buy;15.2;102;40;
-SPCE;buy;25;102;30;
-SUNW;buy;11;102;15;
-FSLR;buy;77;102;85;
-SPWR;buy;31;102;35;
-RUN;buy;54;102;60;
-SEDG;buy;274;102;290;
-BIDU;buy;215;102;300;
+NNDM;buy;7.5;105;8;
+AAPL;buy;119;105;122;
+APHA;buy;17;105;20;
+ACB;buy;8.5;105;9;
+NIO;buy;30;105;60;
+TLRY;buy;19;105;23;
+PLTR;buy;19;105;23;
+TSLA;buy;590;105;700;
+RR.L;buy;101;105;107;
+HMMJ;buy;7.5;105;40;
+PSLV;buy;6.5;105;21;
+TAN;buy;80;105;200;
+GLDM;buy;15.2;105;40;
+SPCE;buy;25;105;30;
+SUNW;buy;11;105;15;
+FSLR;buy;77;105;85;
+SPWR;buy;31;105;35;
+RUN;buy;54;105;60;
+SEDG;buy;270;105;285;
+BIDU;buy;215;105;250;
+OGI;buy;3.250;105;3.5;
+S92.DE;buy;47;105;51;
