Changed class members to be private

--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,2 +1,6 @@
-TLRY;buy;16.0;205;34;
-PSLV;buy;8.93;205;16;
+TLRY;buy;14;205;34;
+PSLV;buy;9;205;16;
+RR.L;buy;101;205;300;
+XPEV;buy;25;205;60;
+NIO;buy;30;205;80;
+TTM;buy;10;205;40;
