--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,6 +1,9 @@
-TLRY;buy;14;205;34;
-PSLV;buy;9;205;16;
-RR.L;buy;101;205;300;
-XPEV;buy;25;205;60;
-NIO;buy;30;205;80;
-TTM;buy;10;205;40;
+TLRY;buy;14;113;34;
+PSLV;buy;9;113;16;
+RR.L;buy;101;113;300;
+XPEV;buy;25;113;60;
+NIO;buy;30;113;80;
+TTM;buy;10;113;40;
+NTDOY;buy;75;113;150;
+ETSY;buy;160;113;400;
+BIDU;buy;189;113;308;
