Change home direcotry permisions after create a user

--- a/Bots/eToroBot/config
+++ b/Bots/eToroBot/config
@@ -1,9 +1,8 @@
-TLRY;buy;14;113;34;
-PSLV;buy;9;113;16;
-RR.L;buy;101;113;300;
+TLRY;buy;11;100;20;
+RR.L;buy;101;300;300;
 XPEV;buy;25;113;60;
 NIO;buy;30;113;80;
 TTM;buy;10;113;40;
 NTDOY;buy;75;113;150;
-ETSY;buy;160;113;400;
-BIDU;buy;189;113;308;
+BIDU;buy;150;100;308;
+BABA;buy;160;372;300;
