--- a/Kitty/kitty.conf
+++ b/Kitty/kitty.conf
@@ -876,7 +876,7 @@
 #: start_resizing_window. The cells value is used for horizontal
 #: resizing, and the lines value is used for vertical resizing.
 
-# window_border_width 0.5pt
+
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -934,6 +934,8 @@
 
 # active_border_color #00ff00
 
+
+
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
@@ -951,7 +953,6 @@
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1061,7 +1062,6 @@ hide_window_decorations yes
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
 
 #: The tab bar style, can be one of:
 
@@ -1290,8 +1290,7 @@ hide_window_decorations yes
 
 #:     transparent_background_colors red@0.5 #00ff00@0.3
 
-background_opacity         0.6
-dynamic_background_opacity yes
+
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
@@ -1405,7 +1404,7 @@ dynamic_background_opacity yes
 
 #: Advanced {{{
 
-# shell .
+
 
 #: The shell program to execute. The default value of . means to use
 #: the value of of the SHELL environment variable or if unset,
@@ -2639,3 +2638,20 @@ dynamic_background_opacity yes
 #: }}}
 
 #: }}}
+
+shell /bin/zsh
+
+
+hide_window_decorations yes
+
+
+background_opacity         0.6
+dynamic_background_opacity yes
+
+tab_bar_style hidden
+
+
+window_corner_radius 12
+window_border_width 5pt
+active_border_color #00ff00
+inactive_border_color #008800
